Input, not component

--- a/4-using-events/index.html
+++ b/4-using-events/index.html
@@ -21,7 +21,7 @@
 
     // A new feature of our component is the onChange attribute,
     // which React uses for communication. In this case, React will
-    // fire the handleChange method any time the component text changes.
+    // fire the handleChange method any time the input text changes.
     //
     // A list of all events React supports can be found at:
     // https://facebook.github.io/react/docs/events.html
