Remove the React.DOM pragma from all examples. Add Egghead.io React link

--- a/1-hello-world/index.html
+++ b/1-hello-world/index.html
@@ -18,12 +18,9 @@
     real apps, but we'll fix that in later versions.
 
     Setting type to text/jsx allows React to parse our JSX before
-    trying to execute our JavaScript. The @jsx React.DOM comment
-    must be the first line of any script that contains JSX code.
+    trying to execute our JavaScript.
   -->
   <script type="text/jsx">
-    /** @jsx React.DOM **/
-
     // React is component-based. We create our own components
     // using React.createClass. It accepts an object which must
     // at a minimum include a render method that returns the
