Link to Basic Flux page in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="3-nesting-components">Nesting Components</a></li>
     <li><a href="4-using-events">Using Events</a></li>
     <li><a href="5-conditional-rendering">Conditional Rendering</a></li>
+    <li><a href="6-basic-flux">Basic Flux</a></li>
   </ol>
 </body>
 </html>
