Tweak flux index.html docs

--- a/6-basic-flux/index.html
+++ b/6-basic-flux/index.html
@@ -32,7 +32,7 @@
     In the js directory you'll see another series of directories: actions,
     components, constants, dispatcher and stores. These are where we'll put
     our React/Flux app code. The dist directory is where our build step will
-    put the compiled application file: bundle.js. You can see below that
+    put the compiled application file: bundle.js. You can see above that
     dist/bundle.js is the only script file we need to include for our app
     to load into this page.
 
