--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="4-using-events">Using Events</a></li>
     <li><a href="5-conditional-rendering">Conditional Rendering</a></li>
     <li><a href="6-basic-flux">Basic Flux</a></li>
+    <li><a href="7-react-router">Supporting Multiple Views with React Router</a></li>
   </ol>
 </body>
 </html>
