--- a/7-react-router/index.html
+++ b/7-react-router/index.html
@@ -6,7 +6,9 @@
   <title>React Router</title>
 </head>
 <body>
-  One moment while the application loads...
+  <div id="my-react-app">
+    One moment while the application loads...
+  </div>
 </body>
 <script src="dist/bundle.js"></script>
 </html>
